<resources>
    <string name="app_name">Reiki Journal</string>
    <string name="diario_de_reiki">Reiki Journal</string>
    <string name="meditar">Meditate</string>
    <string name="backup">Backup</string>
    <string name="novo">New session</string>
    <string name="come_ar">Start</string>
    <string name="pausar">Pause</string>
    <string name="recome_ar">Reset</string>
    <string name="restore">Restore</string>
    <string name="export_to_text_file">Export to text file</string>
    <string name="doyouwanttomakebackup">Do you want to make a backup?</string>
    <string name="thefilewillbeinspecificformat">The file will be created in a specific format.</string>
    <string name="doyouwanttoexport">Do you want export to text file?</string>
    <string name="thefilewillbereadable">The file will be readable</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invalidfile">Invalid file</string>
    <string name="bacupcompleted">Backup completed.</string>
    <string name="textfilecreated">Text file created.</string>
    <string name="sessonofday">" - Session of day "</string>
    <string name="program_clock_to_meditate">Program Notification to meditate</string>
    <string name="resume">Resume</string>
    <string name="escolher_musica">Choose music</string>
    <string name="reproduzir">Play</string>
    <string name="parar">Stop</string>
    <string name="relogioprogramado">Clock scheduled</string>
    <string name="notificacaodealarmeparanaoesquecermeditar">Alarm notification to not forget to meditate</string>
    <string name="jasaohorasdemeditar">It\'s time to meditate, don\'t forget the positive energy!</string>
    <string name="settings">Settings</string>
    <string name="obrigadopeladoacao">\n\nThanks for your donation :D</string>
    <string name="doar">Donate</string>
    <string name="escolheahora">Choose the time</string>
    <string name="cronometro">Stopwatch</string>
    <string name="leitor_musica">Music Player</string>
    <string name="meditationtime">Meditation time</string>
    <string name="sessaogravadacomsucesso">Reiki session saved</string>
    <string name="escreveaobservacao">Write an observation</string>
    <string name="escolheadata">Choose session date</string>
    <string name="escolheradata">Choose Date</string>
    <string name="reikijournalmeditationnotification">Reiki Journal - Meditate notification</string>
</resources>
